# P.i.f.k.o

./: README.md  compose.yml  main.py  pyproject.toml
src/Pifko/: clean_db.py  mock_db.py
src/Pifko/agents/orchestrator-agent/: Plot.md
src/Pifko/mock/: README.md  mock_brewery.py  mock_orders.py  mock_storage.py
src/Pifko/services/brewery-service/: README.md  dockerfile  main.py
src/Pifko/services/brewery-service/db/: connection.py
src/Pifko/services/brewery_service/: dockerfile  main.py
src/Pifko/services/brewery_service/db/: clean_db.py  connection.py  models.py
src/Pifko/services/orders-service/: README.md  dockerfile  main.py
src/Pifko/services/orders_service/: dockerfile  main.py
src/Pifko/services/orders_service/db/: clean_db.py  models.py
src/Pifko/services/storage-service/: README.md  dockerfile  main.py
src/Pifko/services/storage_service/: dockerfile  main.py
src/Pifko/services/storage_service/db/: clean_db.py  connection.py  models.py
src/Pifko/utils/: logger.py
